[gd_scene load_steps=4 format=3 uid="uid://cwe2p5eoodw7y"]

[ext_resource type="Script" path="res://hud.gd" id="1_mvvcr"]
[ext_resource type="FontFile" uid="uid://dmdlfc51y2tin" path="res://fonts/Semyon Soviet.ttf" id="2_kph3d"]
[ext_resource type="FontFile" uid="uid://c1f13ifdv0xc7" path="res://fonts/MeromSans-Regular.ttf" id="2_n7njh"]

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_mvvcr")

[node name="Start" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -152.0
offset_right = 70.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_n7njh")
theme_override_font_sizes/font_size = 50
text = "Start"

[node name="ReadyText" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.0
offset_top = -21.0
offset_right = 259.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kph3d")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReadyTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="TimerLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_kph3d")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="StageTwoLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -11.5
offset_right = 12.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kph3d")
theme_override_font_sizes/font_size = 40

[node name="StageTwoTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="PlayAgain" type="Button" parent="."]
visible = false
offset_left = 520.0
offset_top = 496.0
offset_right = 654.0
offset_bottom = 573.0
theme_override_fonts/font = ExtResource("2_n7njh")
theme_override_font_sizes/font_size = 25
text = "Play Again"

[node name="GameOverLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -27.5
offset_right = 20.0
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_kph3d")
theme_override_font_sizes/font_size = 40

[node name="HP" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_kph3d")

[connection signal="pressed" from="Start" to="." method="_start_press"]
[connection signal="timeout" from="ReadyTimer" to="." method="_on_readyText_timer_timeout"]
[connection signal="timeout" from="StageTwoTimer" to="." method="_on_stage_two_timer_timeout"]
[connection signal="pressed" from="PlayAgain" to="." method="_on_play_again_pressed"]
